samples/_failures_safe/1761320314_3856fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8ffd8f1.c: In function ‘main’:
./samples/SAFE/__tmp_a8ffd8f1.c:201:25: error: expected ‘)’ at end of input
  201 |     if (token_count <= 0
      |        ~                ^
      |                         )
./samples/SAFE/__tmp_a8ffd8f1.c:201:5: error: expected declaration or statement at end of input
  201 |     if (token_count <= 0
      |     ^~
